# mis-eventos

./: README.md  docker-compose.yml
backend-eventos/: .env.example  .gitignore  Dockerfile  README.md  create_tables.py  pyproject.toml  requirements.txt  wait-for-db.sh
backend-eventos/app/: main.py
backend-eventos/app/config/: database.py
backend-eventos/app/models/: event.py  role.py  user.py
backend-eventos/app/routers/: auth.py  event.py  roles.py  seed.py  users.py
mis-eventos-frontend/: .env  .env.example  Dockerfile  README.md  index.html  package.json
mis-eventos-frontend/src/: App.tsx  environment.ts  main.tsx
mis-eventos-frontend/src/components/: SideModal.tsx  UserAssignmentModal.tsx  card.tsx
mis-eventos-frontend/src/hooks/: eventHook.tsx  rolesHook.tsx  store.tsx  useSession.ts  usersHook.tsx
mis-eventos-frontend/src/interfaces/: register.ts
mis-eventos-frontend/src/pages/auth/: ForgotPassword.tsx  Login.tsx  auth.tsx
mis-eventos-frontend/src/pages/dashboard/: dashboard.tsx  sidebar.tsx
mis-eventos-frontend/src/pages/events/: events.tsx  formEvents.tsx
mis-eventos-frontend/src/pages/home/: home.tsx
mis-eventos-frontend/src/pages/profile/: profile.tsx
mis-eventos-frontend/src/pages/users/: formUsers.tsx  users.tsx
mis-eventos-frontend/src/services/: auth.ts  events.ts  roles.ts  users.ts
mis-eventos-frontend/src/styles/: App.css
